Add Fuzzy Search to Music Library

--- a/Assets/packages.config
+++ b/Assets/packages.config
@@ -6,6 +6,7 @@
   <package id="Melanchall.DryWetMidi.Nativeless" version="7.0.0" />
   <package id="Microsoft.NETCore.Platforms" version="7.0.1" />
   <package id="NETStandard.Library" version="2.0.3" />
+  <package id="RapidFuzz.Net" version="1.2.1" />
   <package id="sqlite-net" version="1.6.292" />
   <package id="System.Diagnostics.Tracing" version="4.3.0" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="6.0.0" />
