--- a/Assets/packages.config
+++ b/Assets/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="FuzzySharp" version="2.0.2" />
   <package id="ManagedBass" version="3.1.1" />
   <package id="ManagedBass.Fx" version="3.1.1" />
   <package id="ManagedBass.Mix" version="3.1.1" />
