Rename Crowdin branch to `crowdin-translations`

--- a/.github/workflows/crowdin-pr.yml
+++ b/.github/workflows/crowdin-pr.yml
@@ -22,7 +22,7 @@ jobs:
           upload_sources: false
           upload_translations: false
           download_translations: true
-          localization_branch_name: crowdin_translations
+          localization_branch_name: crowdin-translations
 
           create_pull_request: true
           pull_request_title: 'Translation Updates'
