Set VS Code CMake directory settings

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,4 +12,6 @@
         "Temp/":true
     },
     "dotnet.defaultSolution": "YARG.sln",
+    "cmake.sourceDirectory": "E:/Programming/Source/Unity/YARG/YARG.Core",
+    "cmake.buildDirectory": "${workspaceFolder}/YARG.Core/build"
 }
