--- a/.editorconfig
+++ b/.editorconfig
@@ -12,6 +12,7 @@ csharp_style_prefer_utf8_string_literals = true:suggestion
 csharp_style_var_elsewhere = false:none
 csharp_style_var_for_built_in_types = false:none
 csharp_prefer_braces = true:suggestion
+csharp_indent_case_contents_when_block = false
 dotnet_naming_rule.constants_rule.import_to_resharper = as_predefined
 dotnet_naming_rule.constants_rule.severity = warning
 dotnet_naming_rule.constants_rule.style = all_upper_style
