--- a/.github/workflows/android-build.yml
+++ b/.github/workflows/android-build.yml
@@ -1,4 +1,4 @@
-name: YargAndroid
+name: Android APK Build
 
 on: [push, pull_request]
 
@@ -10,7 +10,7 @@ jobs:
       - name: Checkout Code
         uses: actions/checkout@v3
 
-      - name: Set up JDK
+      - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
           distribution: 'temurin'
@@ -19,15 +19,17 @@ jobs:
       - name: Setup Android SDK
         uses: android-actions/setup-android@v3
 
-      - name: Build Debug APK
-        run: ./gradlew assembleDebug
+      - name: Grant Execute Permission to Gradlew
+        run: chmod +x gradlew
 
-      - name: Upload APK
+      - name: Clean and Sync Dependencies
+        run: ./gradlew clean build --refresh-dependencies
+
+      - name: Build Debug APK
+        run: ./gradlew assembleDebug --stacktrace
+
+      - name: Upload APK Artifact
         uses: actions/upload-artifact@v3
         with:
           name: YARG-Android-APK
           path: app/build/outputs/apk/debug/app-debug.apk
-
-          - name: Grant Execute Permission to Gradlew
-  run: chmod +x gradlew
-          
