--- a/.github/workflows/android-build.yml
+++ b/.github/workflows/android-build.yml
@@ -10,22 +10,22 @@ jobs:
       - name: Checkout Code
         uses: actions/checkout@v3
 
-name: Setup Android SDK
-  run: |
-    sudo apt-get update
-    sudo apt-get install -y openjdk-17-jdk
-    wget https://dl.google.com/android/repository/commandlinetools-linux-11076708_latest.zip
-    mkdir -p "$ANDROID_HOME/cmdline-tools"
-    unzip commandlinetools-linux-11076708_latest.zip -d "$ANDROID_HOME/cmdline-tools"
-    mv "$ANDROID_HOME/cmdline-tools/cmdline-tools" "$ANDROID_HOME/cmdline-tools/latest"
-    yes | sdkmanager --licenses
-    sdkmanager "platform-tools" "platforms;android-33" "build-tools;33.0.2"
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
         with:
           distribution: 'temurin'
           java-version: '17'
 
       - name: Setup Android SDK
-        uses: android-actions/setup-android@v3
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y openjdk-17-jdk
+          wget https://dl.google.com/android/repository/commandlinetools-linux-11076708_latest.zip
+          mkdir -p "$ANDROID_HOME/cmdline-tools"
+          unzip commandlinetools-linux-11076708_latest.zip -d "$ANDROID_HOME/cmdline-tools"
+          mv "$ANDROID_HOME/cmdline-tools/cmdline-tools" "$ANDROID_HOME/cmdline-tools/latest"
+          yes | sdkmanager --licenses
+          sdkmanager "platform-tools" "platforms;android-33" "build-tools;33.0.2"
 
       - name: Grant Execute Permission to Gradlew
         run: chmod +x gradlew
@@ -41,3 +41,4 @@ name: Setup Android SDK
         with:
           name: YARG-Android-APK
           path: app/build/outputs/apk/debug/app-debug.apk
+          
