--- a/.github/workflows/android-build.yml
+++ b/.github/workflows/android-build.yml
@@ -7,8 +7,13 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - name: Use Node.js 20
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+
       - name: Checkout Code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Set up JDK 17
         uses: actions/setup-java@v3
@@ -41,4 +46,3 @@ jobs:
         with:
           name: YARG-Android-APK
           path: app/build/outputs/apk/debug/app-debug.apk
-          
