Allow exporting PDF of songs list

--- a/Assets/packages.config
+++ b/Assets/packages.config
@@ -7,6 +7,7 @@
   <package id="Melanchall.DryWetMidi.Nativeless" version="7.0.0" manuallyInstalled="true" />
   <package id="Microsoft.NETCore.Platforms" version="7.0.1" />
   <package id="NETStandard.Library" version="2.0.3" />
+  <package id="QuestPDF" version="2025.7.2" manuallyInstalled="true" />
   <package id="System.Diagnostics.Tracing" version="4.3.0" manuallyInstalled="true" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="6.0.0" manuallyInstalled="true" />
   <package id="UniRx" version="5.4.1" manuallyInstalled="true" />
